@@ -1,5 +1,11 @@
 2023-01-23  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-fold.c (pkl_phase_fold): Remove duplicated handler
+	entry.
+	* libpoke/pkl-trans.c (pkl_phase_trans1): Likewise.
+
+2023-01-23  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/ios.c (ios_read_int): Avoid UB in signed left shifts,
 	and overflows in unsigned left shifts.
 	* libpoke/pvm-val.h (PVM_VAL_INT): Likewise.
